REGRESSION (r276883): [Debug] ASSERTION FAILED: index != notFound in WebCore::PlatformMediaSessionManager::setCurrentSession() https://bugs.webkit.org/show_bug.cgi?id=225332 <rdar://problem/77476145>

Reviewed by Eric Carlson.

PlatformMediaSessionManager will throw an assert if the session being set as "current" via
sessionWillBeginPlayback() isn't active; we activate the session immediately after this line
inside lazyInitialize(), but this looks to be too late. A similar problem may occur in
HTMLMediaElement::playInternal(), so activate the session there too.

* Modules/webaudio/AudioContext.cpp:
(WebCore::AudioContext::lazyInitialize):
(WebCore::AudioContext::willBeginPlayback):
* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::playInternal):


Canonical link: https://commits.webkit.org/237305@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276978 268f45cc-cd09-0410-ab3c-d52691b4dbfc